# Santa2025

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.cpu  Makefile  README.md  compose.cpu.yaml  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
data/: README.md
docs/: SPARROW_WASM.md  TEAM_GUIDE.md  experiments.md
experiments/: README.md
experiments/exp000_sample/: config.yaml  run.py
experiments/exp000_sample/exp/: 000.yaml  001.yaml  002.yaml
experiments/exp001_baseline/: run.py
experiments/exp001_baseline/exp/: 000.yaml  001.yaml  010.yaml  020.yaml  030.yaml  040.yaml  050.yaml
experiments/exp002_baseline/: run.py
experiments/exp002_baseline/utils/: env.py  timing.py
experiments/exp003_es/: run.py
experiments/exp003_es/utils/: logger.py
experiments/exp004_baseline/: config.yaml  run.py
experiments/exp004_baseline/exp/: 001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml  007.yaml
experiments/exp005_reheat/: run.py
experiments/exp005_reheat/exp/: 001.yaml
experiments/exp006_hill/: run.py
experiments/exp006_hill/exp/: 000.yaml  001.yaml
experiments/exp007_intensive/: run.py
experiments/exp007_intensive/exp/: 000.yaml  001.yaml  002.yaml  003.yaml
experiments/exp007_intensive/utils/: __init__.py
experiments/exp008_local_search/: run.py
experiments/exp008_local_search/exp/: 000.yaml  001.yaml  002.yaml  003.yaml
experiments/exp009_seed_search/: run.py
experiments/exp009_seed_search/exp/: 000.yaml
experiments/exp010_small_groups/: run.py
experiments/exp010_small_groups/exp/: 000.yaml  001.yaml
experiments/exp011_dense_pack/: run.py
experiments/exp011_dense_pack/exp/: 000.yaml  001.yaml  002.yaml  003.yaml
experiments/exp012_genetic/: run.py
experiments/exp012_genetic/exp/: 000.yaml
experiments/exp012_vertex_penalty/: run.py
experiments/exp012_vertex_penalty/exp/: 000.yaml  001.yaml  002.yaml  003.yaml
experiments/exp013_boundary_pack/: run.py
experiments/exp013_boundary_pack/exp/: 000.yaml  001.yaml  002.yaml
experiments/exp013_lns/: run.py
experiments/exp013_lns/exp/: 000.yaml
experiments/exp014_de/: run.py
experiments/exp014_de/exp/: 000.yaml
experiments/exp014_pressure_penalty/: run.py
experiments/exp014_pressure_penalty/exp/: 000.yaml
experiments/exp015_pattern_penalty/: run.py
experiments/exp015_pattern_penalty/exp/: 000.yaml  001.yaml  002.yaml
experiments/exp015_pso/: run.py
experiments/exp015_pso/exp/: 000.yaml
experiments/exp016_from_scratch/: run.py
experiments/exp016_from_scratch/exp/: 000.yaml
experiments/exp016_gap_slide/: run.py
experiments/exp016_gap_slide/exp/: 000.yaml  001.yaml  002.yaml
experiments/exp017_refine_baseline/: run.py
experiments/exp017_refine_baseline/exp/: 000.yaml
experiments/exp017_shake_slide/: run.py
experiments/exp018_direct_optimize/: run.py
experiments/exp018_gap_fill/: run.py
experiments/exp019_new_patterns/: run.py
experiments/exp019_rrt/: run.py
experiments/exp019_rrt/exp/: 000.yaml  (+5 more)
experiments/exp020_symmetric_slide/: run.py
experiments/exp021_squeeze/: run.py
experiments/exp021_ssa/: run.py
experiments/exp022_seed_ensemble/: run.py
experiments/exp023_penalty/: run.py
outputs/: README.md
scripts/: analyze_baseline_patterns.py  analyze_scores.py  check_submission_overlaps.py  diff_submissions.py  download_competition_data.py  fix_all_overlaps.py  merge_best_groups.py  optimize_group_rotation.py  optimize_with_sparrowwasm.py  scale_submission_groups.py  theoretical_analysis.py  visualize_experiments.py
src/santa2025/: main.py  paths.py  repair_submission.py
submissions/: README.md
tests/: test_import.py
tools/: upload_dataset.py
(+22 files in other folders)
