[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "santa2025"
version = "0.1.0"
description = "Kaggle Santa 2025 team repository"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click",
  "hydra-core",
  "kaggle",
  "matplotlib",
  "numpy<2.0",
  "pandas",
  "psutil",
  "python-dotenv",
  "pyyaml",
  "scikit-learn",
  "seaborn",
  "shapely",
  "tqdm",
]

[dependency-groups]
dev = [
  "ipykernel",
  "jupyterlab",
  "pre-commit",
  "pytest",
  "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
